--- a/index.html
+++ b/index.html
@@ -5,39 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+    </style>
 </head>
 <body>
+    <div class="fundo"></div>
     <div class="calculadora">
         <h1>Calculadora</h1>
-        <p id="resultado">resultado</p>
+        <p id="resultado"></p>
         <table>
             <tr>
-                <td><button>C</button></td>
-                <td><button><</button></td>
-                <td><button>/</button></td>
-                <td><button>*</button></td>
+                <td><button class="botão">C</button></td>
+                <td><button class="botão"><</button></td>
+                <td><button class="botão">/</button></td>
+                <td><button class="botão">*</button></td>
             </tr>
             <tr>
-                <td><button>7</button></td>
-                <td><button>8</button></td>
-                <td><button>9</button></td>
-                <td><button>-</button></td>
+                <td><button class="botão">7</button></td>
+                <td><button class="botão">8</button></td>
+                <td><button class="botão">9</button></td>
+                <td><button class="botão">-</button></td>
             </tr>
             <tr>
-                <td><button>4</button></td>
-                <td><button>5</button></td>
-                <td><button>6</button></td>
-                <td><button>+</button></td>
+                <td><button class="botão">4</button></td>
+                <td><button class="botão">5</button></td>
+                <td><button class="botão">6</button></td>
+                <td><button class="botão">+</button></td>
             </tr>
             <tr>
-                <td><button>1</button></td>
-                <td><button>2</button></td>
-                <td><button>3</button></td>
-                <td rowspan="2"><button>=</button></td>
+                <td><button class="botão">1</button></td>
+                <td><button class="botão">2</button></td>
+                <td><button class="botão">3</button></td>
+                <td rowspan="2"><button class="botão" style="height: 106px;">=</button></td>
             </tr>
             <tr>
-                <td colspan="2"><button>0</button></td>
-                <td><button>.</button></td>
+                <td colspan="2"><button class="botão" style="width: 106px;">0</button></td>
+                <td><button class="botão">.</button></td>
             </tr>
         </table>
     </div>
